LabitemDialog: Can display the modal dialog. Always show verticle scrollbar to avoid UI flash.

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,7 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+html{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
